feat: fix check btn width

--- a/cart.html
+++ b/cart.html
@@ -144,11 +144,13 @@
           <dt class="text-[20px] font-semibold">總計</dt>
           <dd class="text-right text-[20px] font-semibold">NT$ 3,000</dd>
         </dl>
-
+      </section>
+      <section>
         <button class="accent-btn w-full h-full py-4 mt-4">
           <span>結帳</span>
         </button>
       </section>
+
     </main>
 
     <footer class="max-w-[1024px] mx-auto">
