--- a/cart.html
+++ b/cart.html
@@ -61,7 +61,7 @@
                   <p class="text-[20px]">草莓優格碗</p>
                   <p>NT$ 450</p>
                 </div>
-                <ul class="flex w-full text-[#3F5D45] md:w-[144px] md:h-[48px]">
+                <ul class="flex w-full text-[#3F5D45] md:max-w-[144px] md:h-12">
                   <li
                     class="w-[33.3%] h-full min-h-12 flex justify-center items-center border border-[#EAF0ED]"
                   >
@@ -202,7 +202,7 @@
         >
           訂單摘要
         </h2>
-        <dl class="grid grid-cols-2 w-full text-[#EAF0ED] max-w-[260px] mb-4">
+        <dl class="grid grid-cols-2 w-full text-[#EAF0ED] px-[18px] mb-4">
           <dt>小計</dt>
           <dd class="text-right">NT$ 2,700</dd>
 
