--- a/order-shipping.html
+++ b/order-shipping.html
@@ -1,33 +1,242 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sweetaste訂單詳情-運送方式</title>
-    <link href="./src/output.css" rel="stylesheet">
-    <link href="./scss/main.css" rel="stylesheet">
-</head>
-<body>
-    <header class="flex justify-between w-full max-w-[1024px] h-10 px-[33px] md:px-[42px] mr-auto ml-auto mt-[30px] mb-[30px] items-center">
-        <button class="hover:cursor-pointer block md:hidden" >
-            <img src="./images/dehaze-24px.png" alt="漢堡選單">
-        </button>
-        <picture class="w-[200px] h-10 items-center">
-            <source media="(max-width:768px)" srcset="./images\logotype-lg-dark.svg">
-            <img class="h-10" src="./images/logo-all-dark.svg" alt="品牌Logo">
-        </picture>
-        <nav class="max-w-[300px] flex justify-between gap-[79px] items-center">
-            <ul class="w-[215px] hidden md:flex justify-between items-center">
-                <li class="text-[#3F5D45] font-semibold"><a href="index.html">首頁</a></li>
-                <li class="text-[#3F5D45] font-semibold"><a href="product.html">甜點</a></li>
-                <li class="text-[#3F5D45] font-semibold"><a href="login.html">登入</a></li>
-            </ul>
-            <div class="w-[24px] ">
-                <a href="cart.html"><img src="./images/shopping_cart.png" alt="前往購物車"></a>
-            </div>
-        </nav>
+    <link href="./src/output.css" rel="stylesheet" />
+    <link href="./scss/main.css" rel="stylesheet" />
+  </head>
+  <body>
+    <header
+      class="flex justify-between w-full max-w-[1024px] h-10 px-[33px] md:px-[42px] mr-auto ml-auto mt-[30px] mb-[30px] items-center"
+    >
+      <button class="hover:cursor-pointer block md:hidden">
+        <img src="./images/dehaze-24px.png" alt="漢堡選單" />
+      </button>
+      <picture class="w-[200px] h-10 items-center">
+        <source
+          media="(max-width:768px)"
+          srcset="./images\logotype-lg-dark.svg"
+        />
+        <img class="h-10" src="./images/logo-all-dark.svg" alt="品牌Logo" />
+      </picture>
+      <nav class="max-w-[300px] flex justify-between gap-[79px] items-center">
+        <ul class="w-[215px] hidden md:flex justify-between items-center">
+          <li class="text-[#3F5D45] font-semibold">
+            <a href="index.html">首頁</a>
+          </li>
+          <li class="text-[#3F5D45] font-semibold">
+            <a href="product.html">甜點</a>
+          </li>
+          <li class="text-[#3F5D45] font-semibold">
+            <a href="login.html">登入</a>
+          </li>
+        </ul>
+        <div class="w-[24px]">
+          <a href="cart.html"
+            ><img src="./images/shopping_cart.png" alt="前往購物車"
+          /></a>
+        </div>
+      </nav>
     </header>
 
-<script src="./js/all.js"></script>
-</body>
+    <main class="bg-[#3F5D45] max-w-[1024px] mx-auto">
+      <section class="flex justify-between items-center p-[30px]">
+        <h1 class="text-[#EAF0ED] text-4xl font-semibold">運送</h1>
+        <ol class="stepper">
+          <li class="stepper-item active"></li>
+          <li class="stepper-item"></li>
+          <li class="stepper-item"></li>
+        </ol>
+      </section>
+      <form class="px-[30px]">
+        <section class="flex justify-between gap-[9px]">
+          <section class="flex-1">
+            <label class="text-[20px] text-[#EAF0ED] font-semibold">姓氏</label>
+            <div class="bg-[#EAF0ED] justify-end min-w-[153px] h-[56px] pl-5 mt-2">
+              <input
+                class="bg-[#EAF0ED] key-in w-full h-full"
+                type="text"
+                placeholder="王"
+              />
+            </div>
+          </section>
+          <section class="flex-1">
+            <label class="text-[20px] text-[#EAF0ED] font-semibold">名字</label>
+            <div class="bg-[#EAF0ED] justify-end min-w-[153px] h-[56px] pl-5 mt-2 mb-4">
+              <input
+                class="bg-[#EAF0ED] key-in w-full h-full"
+                type="text"
+                placeholder="小明"
+              />
+            </div>
+          </section>
+        </section>
+
+        <section>
+          <label class="text-[20px] text-[#EAF0ED] font-semibold">電話</label>
+          <div class="bg-[#EAF0ED] justify-end min-w-[153px] h-[56px] pl-5 mt-2 mb-4">
+            <input
+              class="bg-[#EAF0ED] key-in w-full h-full"
+              type="text"
+              placeholder="0912-345-678"
+            />
+          </div>
+        </section>
+
+        <section class="flex justify-between gap-[9px] items-end flex-wrap">
+          <section class="flex-1">
+            <label class="text-[20px] text-[#EAF0ED] font-semibold">地址</label>
+            <div class="bg-[#EAF0ED] flex justify-end items-center min-w-[153px] h-[56px] pl-5 mt-2 mb-4">
+              <select
+                class="bg-[#EAF0ED] key-in w-full h-full appearance-none"
+              >
+                <option value="基隆市">基隆市</option>
+                <option value="台北市">台北市</option>
+                <option value="新北市">新北市</option>
+                <option value="桃園市">桃園市</option>
+                <option value="新竹市">新竹市</option>
+                <option value="新竹縣">新竹縣</option>
+                <option value="苗栗縣">苗栗縣</option>
+                <option value="台中市">台中市</option>
+                <option value="彰化縣">彰化縣</option>
+                <option value="南投縣">南投縣</option>
+                <option value="雲林縣">雲林縣</option>
+                <option value="嘉義市">嘉義市</option>
+                <option value="嘉義縣">嘉義縣</option>
+                <option value="台南市">台南市</option>
+                <option value="高雄市">高雄市</option>
+                <option value="屏東縣">屏東縣</option>
+                <option value="宜蘭縣">宜蘭縣</option>
+                <option value="花蓮縣">花蓮縣</option>
+                <option value="台東縣">台東縣</option>
+                <option value="澎湖縣">澎湖縣</option>
+                <option value="金門縣">金門縣</option>
+                <option value="連江縣">連江縣</option>
+              </select>
+              <figure>
+                <img src="./images/baseline-arrow-drop-up.png" alt="上一個選項">
+                <img src="./images/baseline-arrow-drop-down.png" alt="下一個選項">
+              </figure>
+              
+            </div>
+          </section>
+
+          <section class="flex-1">
+            <div class="bg-[#EAF0ED] flex justify-end items-center min-w-[153px] h-[56px] pl-5 mb-4 relative">
+              <input
+                class="bg-[#EAF0ED] key-in w-full h-full"
+                type="text"
+                placeholder="新興區"
+              />
+              <figure>
+                <img src="./images/baseline-arrow-drop-up.png" alt="上一個選項">
+                <img src="./images/baseline-arrow-drop-down.png" alt="下一個選項">
+              </figure>
+              
+            </div>
+          </section>
+
+          <section class="flex-2 basis-full">
+            <div class="bg-[#EAF0ED] justify-end min-w-[153px] h-[56px] pl-5">
+              <input
+                class="bg-[#EAF0ED] key-in w-full h-full"
+                type="text"
+                placeholder="幸福路 520 號"
+              />
+            </div>
+          </section>
+
+        </section>
+
+        <button class="accent-btn w-full h-full py-4 mt-[30px]">下一步</button>
+      </form>
+    </main>
+
+    <footer class="max-w-[1024px] mx-auto">
+      <section
+        class="flex items-center h-[116px] bg-[#3F5D45] max-[769px]:h-[186px]"
+      >
+        <div
+          class="flex justify-between items-center w-[780px] mx-auto max-[769px]:flex-col h-[122px]"
+        >
+          <div class="flex justify-between w-[276px]">
+            <img
+              class="w-[40px] h-[40px]"
+              src="./images/logo-light@2x.png"
+              alt="Sweetaste品牌Logo"
+            />
+            <p class="flex items-center justify-center text-[#EAF0ED] text-2xl">
+              訂閱你我的甜蜜郵件
+            </p>
+          </div>
+          <div
+            class="relative flex bg-[#EAF0ED] justify-end w-[380px] h-[56px] max-[769px]:w-[315px]"
+          >
+            <input class="key-in w-[200px] md:w-[272px]" type="text" />
+            <img
+              class="absolute top-4 left-5 w-[24px] h-[24px]"
+              src="./images/mail-24px.png"
+              alt="訂閱信箱輸入欄位"
+            />
+            <button
+              class="accent-btn w-[64px] flex justify-center items-center"
+              type="submit"
+            >
+              <img
+                src="./images/arrow_forward-24px.png"
+                alt="提交訂閱電子信箱"
+              />
+            </button>
+          </div>
+        </div>
+      </section>
+
+      <section class="h-[341px] bg-[#EAF0ED] flex items-center">
+        <div
+          class="flex justify-between items-center w-full max-w-[780px] min-w-[315px] mx-auto max-[769px]:block max-[769px]:w-[315px]"
+        >
+          <div>
+            <img
+              class="w-[171px] h-[27px] mb-[116px] max-[769px]:mb-[40px]"
+              src="./images/logotype-lg-dark.svg"
+              alt="Sweetaste品牌Logo"
+            />
+            <div class="text-[#3F5D45] information-font mb-[30px]">
+              <p>07-1234-5678</p>
+              <p>sweetaste@email.com</p>
+              <p>800 高雄市新興區幸福路 520 號</p>
+            </div>
+            <div class="flex justify-between w-[72px] max-[769px]:mb-[30px]">
+              <a href="#"
+                ><img
+                  class="w-[32px] h-[32px]"
+                  src="./images/ic-line@.svg"
+                  alt="官方LINE連結"
+              /></a>
+              <a href="#"
+                ><img
+                  class="w-[32px] h-[32px]"
+                  src="./images/ic-facebook.svg"
+                  alt="臉書粉專連結"
+              /></a>
+            </div>
+          </div>
+          <div
+            class="w-[258px] h-[281px] flex flex-col justify-between items-end max-[769px]:h-full"
+          >
+            <img
+              class="w-[60px] h-[218px] max-[769px]:hidden"
+              src="./images/sm-今天是個吃甜點的好日子@2x.png"
+              alt="今天是個吃甜點的好日子。"
+            />
+            <p class="text-[#3F5D45]">© 2018 Sweetaste* All Rights Reserved</p>
+          </div>
+        </div>
+      </section>
+    </footer>
+
+    <script src="./js/all.js"></script>
+  </body>
 </html>
