feat:fix stepper

--- a/order-shipping.html
+++ b/order-shipping.html
@@ -46,11 +46,11 @@
     >
       <div class="bg-[#3F5D45] md:w-[460px]">
         <section class="flex justify-between items-center p-[30px]">
-          <h1 class="text-[#EAF0ED] text-4xl font-semibold">運送</h1>
-          <ol class="stepper">
-            <li class="stepper-item active"></li>
+          <h1 class="text-[#EAF0ED] text-4xl font-semibold flex-1">運送</h1>
+          <ol class="stepper flex-1">
+            <li class="stepper-item first active"></li>
             <li class="stepper-item"></li>
-            <li class="stepper-item"></li>
+            <li class="stepper-item last"></li>
           </ol>
         </section>
         <form class="px-[30px]">
