--- a/cart.html
+++ b/cart.html
@@ -188,8 +188,8 @@
         </dl>
       </section>
       <section class="md:hidden">
-        <button class="accent-btn w-full h-full py-4 mt-4">
-          <span>結帳</span>
+        <button class="accent-btn w-full h-full mt-4">
+          <a class="block w-full h-full py-4" href="order_shipping.html">結帳</a>
         </button>
       </section>
 
