--- a/order_payment.html
+++ b/order_payment.html
@@ -42,14 +42,14 @@
     </header>
 
     <main
-      class="max-w-[1024px] mx-auto md:flex md:my-[65px] md:gap-5 md:justify-center"
+      class="max-w-[1024px] mx-auto md:flex md:my-[65px] md:gap-5 md:justify-center md:items-start"
     >
       <div class="bg-[#3F5D45] md:w-[460px]">
         <section class="flex justify-between items-center p-[30px]">
           <h1 class="text-[#EAF0ED] text-4xl font-semibold flex-1">付款</h1>
           <ol class="stepper flex-1">
-            <li class="stepper-item first active"></li>
-            <li class="stepper-item"></li>
+            <li class="stepper-item first check"></li>
+            <li class="stepper-item active"></li>
             <li class="stepper-item last"></li>
           </ol>
         </section>
@@ -170,7 +170,7 @@
               >背面末三碼</label
             >
             <div
-              class="bg-[#EAF0ED] flex flex-1 justify-end items-center min-w-[153px] min-h-[56px] pl-5"
+              class="bg-[#EAF0ED] flex justify-end w-[49%] h-[56px] pl-5"
             >
               <input
                 class="bg-[#EAF0ED] key-in w-full h-full"
@@ -180,12 +180,12 @@
             </div>
           </section>
         </form>
-        <button class="accent-btn w-full py-4 mt-[30px]">
-          <a class="block w-full h-full" href="order_e-reciept.html">下一步</a>
+        <button class="accent-btn w-full mt-[30px]">
+          <a class="block w-full h-full py-4" href="order_e-reciept.html">下一步</a>
         </button>
       </div>
 
-      <div class="flex flex-col justify-between">
+      <div class="flex flex-col justify-between gap-5">
         <!-- 網頁版訂單摘要 -->
         <section
           class="hidden flex-col items-center w-full min-w-[300px] border border-[#EAF0ED] md:flex"
