--- a/order_shipping.html
+++ b/order_shipping.html
@@ -42,7 +42,7 @@
     </header>
 
     <main
-      class="max-w-[1024px] mx-auto md:flex md:my-[65px] md:gap-5 md:justify-center"
+      class="max-w-[1024px] mx-auto md:flex md:my-[65px] md:gap-5 md:justify-center md:items-start"
     >
       <div class="bg-[#3F5D45] md:w-[460px]">
         <section class="flex justify-between items-center p-[30px]">
@@ -178,12 +178,16 @@
             </section>
           </section>
         </form>
-        <button class="accent-btn w-full py-4 mt-[30px]"><a class="block w-full h-full" href="order_payment.html">下一步</a></button>
+        <button class="accent-btn w-full mt-[30px]">
+          <a class="block w-full h-full py-4" href="order_payment.html"
+            >下一步</a
+          >
+        </button>
       </div>
 
-      <div class="flex flex-col justify-between">
+      <div class="flex flex-col justify-between gap-5">
         <!-- 網頁版訂單摘要 -->
-          <section
+        <section
           class="hidden flex-col items-center w-full min-w-[300px] border border-[#EAF0ED] md:flex"
         >
           <h2
@@ -203,7 +207,6 @@
           </dl>
         </section>
 
-
         <section
           class="hidden flex-col items-center w-full min-w-[300px] border border-[#EAF0ED] md:flex"
         >
@@ -215,7 +218,11 @@
           <ul class="flex flex-col gap-2 w-full text-[#8DA291] px-5 py-4">
             <li class="flex gap-5 items-center">
               <figure>
-                <img class="w-30 h-20 object-cover" src="https://bit.ly/2QvsT63" alt="焦糖馬卡龍" />
+                <img
+                  class="w-30 h-20 object-cover"
+                  src="https://bit.ly/2QvsT63"
+                  alt="焦糖馬卡龍"
+                />
               </figure>
               <figcaption>
                 <p>焦糖馬卡龍 (2)</p>
@@ -224,7 +231,11 @@
             </li>
             <li class="flex gap-5 items-center">
               <figure>
-                <img class="w-30 h-20 object-cover" src="https://bit.ly/2zBDAxX" alt="焦糖馬卡龍" />
+                <img
+                  class="w-30 h-20 object-cover"
+                  src="https://bit.ly/2zBDAxX"
+                  alt="焦糖馬卡龍"
+                />
               </figure>
               <figcaption>
                 <p>焦糖馬卡龍 (2)</p>
@@ -233,7 +244,11 @@
             </li>
             <li class="flex gap-5 items-center">
               <figure>
-                <img class="w-30 h-20 object-cover" src="https://bit.ly/2zKOP7w" alt="焦糖馬卡龍" />
+                <img
+                  class="w-30 h-20 object-cover"
+                  src="https://bit.ly/2zKOP7w"
+                  alt="焦糖馬卡龍"
+                />
               </figure>
               <figcaption>
                 <p>焦糖馬卡龍 (2)</p>
