feat:add-success hero

--- a/cart.html
+++ b/cart.html
@@ -189,7 +189,7 @@
       </section>
       <section class="md:hidden">
         <button class="accent-btn w-full h-full mt-4">
-          <a class="block w-full h-full py-4" href="order_shipping.html">結帳</a>
+          <a class="block w-full h-full py-4" href="./order_shipping.html">結帳</a>
         </button>
       </section>
 
